--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <nav class="navbar navbar-expand-md navbar-light">
                         <!-- Logo -->
                         <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-                            <img src="../assets/img/fcd3.png" alt="logo" />
+                            <img src="../assets/img/Logo.png" width="120" alt="logo" />
                         </a>
                         <!-- Toggle Button for Mobile Menu -->
                         <button onclick="toggleNavbar()"
@@ -263,7 +263,7 @@
                         <div class="logo">
                             <!--Footer Logo-->
                             <a href="/it-startup/">
-                                <img src="~/Assets/img/footer.png" alt="logo" />
+                                <img src="~/Assets/img/Logo.png" width="80" alt="logo" />
                             </a>
                         </div>
                         <p>
