--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
                     <nav class="navbar navbar-expand-md navbar-light">
                         <!-- Logo -->
                         <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-                            <img src="../assets/img/Logo.png" width="120" alt="logo" />
+                            <picture>
+                                <source srcset="../assets/img/fcd-logo.png" width="180" media="(min-width: 600px)">
+                            <img src="../assets/img/logo-square.png" width="60" alt="logo" />
+                            </picture>
                         </a>
                         <!-- Toggle Button for Mobile Menu -->
                         <button onclick="toggleNavbar()"
@@ -263,7 +266,7 @@
                         <div class="logo">
                             <!--Footer Logo-->
                             <a href="/it-startup/">
-                                <img src="~/Assets/img/Logo.png" width="80" alt="logo" />
+                                <img src="~/Assets/img/fcd-logo.png" width="120" alt="logo" />
                             </a>
                         </div>
                         <p>
