--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                         <!-- Logo -->
                         <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                             <picture>
-                                <source srcset="../assets/img/fcd-logo.png" width="180" media="(min-width: 600px)">
-                            <img src="../assets/img/logo-square.png" width="60" alt="logo" />
+                                <source srcset="../assets/img//banner-image/fcd-logo.png" width="180" media="(min-width: 600px)">
+                            <img src="../assets/img//banner-image/logo-square.png" width="60" alt="logo" />
                             </picture>
                         </a>
                         <!-- Toggle Button for Mobile Menu -->
