--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title | Future Craft Digital</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- CSS -->
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css/FCD")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -26,8 +26,8 @@
                         <!-- Logo -->
                         <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                             <picture>
-                                <source srcset="../assets/img//banner-image/fcd-logo.png" width="180" media="(min-width: 600px)">
-                            <img src="../assets/img//banner-image/logo-square.png" width="60" alt="logo" />
+                                <source srcset="../assets/img/banner-image/fcd-logo.png" width="180" media="(min-width: 600px)">
+                            <img src="../assets/img/banner-image/logo-square.png" width="60" alt="logo" />
                             </picture>
                         </a>
                         <!-- Toggle Button for Mobile Menu -->
@@ -266,7 +266,7 @@
                         <div class="logo">
                             <!--Footer Logo-->
                             <a href="/it-startup/">
-                                <img src="~/Assets/img/fcd-logo.png" width="120" alt="logo" />
+                                <img src="~/Assets/img/banner-image/fcd-logo.png" width="120" alt="logo" />
                             </a>
                         </div>
                         <p>
